@@ -1,3 +1,8 @@
+2007-07-11  Adam Piatyszek  <ediap@users.sourceforge.net>
+
+	* itpp/comm/commfunc.cpp: Compilation warning suppressed by
+	initializing the lambda variable
+
 2007-07-04  Adam Piatyszek  <ediap@users.sourceforge.net>
 
 	* itpp/base/matfunc.cpp, itpp/base/matfunc.h: Added repmat()
